--- a/index2.html
+++ b/index2.html
@@ -33,16 +33,10 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-7 text-center">
-        <h1 class="brand"><span>Insights</span> EmailSender</h1>
+  <div id="sketch-holder">
+     <!-- Our sketch will go here! -->
+   </div>
 
-      </div>
-
-    </div>
-
-  </div>
   <div class="container">
     <!-- <h1 class="brand"><span>Insights</span> EmailSender</h1> -->
     <div class="wrapper animated bounceInRight">
@@ -55,17 +49,17 @@
 
                    <div class="col-sm-3 nopadding">
               <div class="form-group">
-                <input type="text" class="form-control" id="Schoolname" name="inputNames[]" value="" placeholder="Name">
+                <input type="text" class="form-control" id="Schoolname" name="inputNames[]" value="" placeholder="Name" required>
               </div>
             </div>
             <div class="col-sm-3 nopadding">
               <div class="form-group">
-                <input type="text" class="form-control" id="Major" name="inputEmails[]" value="" placeholder="Email">
+                <input type="text" class="form-control" id="Major" name="inputEmails[]" value="" placeholder="Email" required>
               </div>
             </div>
             <div class="col-sm-3 nopadding">
-              <div class="form-group">
-                <input type="text" class="form-control" id="Degree" name="inputUserNames[]" value="" placeholder="Username">
+              <div class="form-group" >
+                <input type="text" class="form-control" id="Degree" name="inputUserNames[]" value="" placeholder="Username" required>
 
               </div>
 
@@ -74,12 +68,12 @@
             <div class="col-sm-3 nopadding">
               <div class="form-group">
                 <div class="input-group">
-                  <input class="form-control" id="educationDate" name="inputPasswords[]" value="" placeholder="Password">
+                  <input class="form-control" id="educationDate" name="inputPasswords[]" value="" placeholder="Password" required>
 
 
 
                   <div class="input-group-btn">
-                    <button id="button2" class="btn btn-success" type="button"  onclick="userFields();"> <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> </button>
+                    <button id="button2" class="btn btn-success" style="background-color:#ff6600;border-color:#ff6600;" type="button"  onclick="userFields();"> <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> </button>
                   </div>
                 </div>
               </div>
@@ -109,7 +103,33 @@
         </div>
     </div>
 
+    <!-- <div class="container">
+      <div class="row">
+        <div class="col-7 text-center">
+          <h1 class="brand"><span>Insights</span> EmailSender</h1>
+
+        </div>
+
+      </div>
+
+    </div> -->
+    <!-- Footer -->
+<footer class="page-footer font-small blue" style="margin-top:320px;">
+
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-right py-3"><span>Insights</span> EmailSender</h1>
+© 2018 Copyright:
+    <a href="https://www.linkedin.com/in/daniellaraedinburgh/"  target="_blank"> Daniel Lara</a>
+
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
       <!-- <canvas id='main-canvas' width='600' height='500'></canvas> <br> -->
+
 
 
 
@@ -120,6 +140,8 @@
     <script src="./js/index1.js"></script>
     <script src="./js/p5.js"></script>
     <script src="./js/p5.dom.js"></script>
+    <script src="./js/vehicle.js"></script>
+
 
 
 
