--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,8 @@
      <!-- Our sketch will go here! -->
    </div>
 
+   <form>
+
   <div class="container">
     <!-- <h1 class="brand"><span>Insights</span> EmailSender</h1> -->
     <div class="wrapper animated bounceInRight">
@@ -48,6 +50,7 @@
 
 
                    <div class="col-sm-3 nopadding">
+
               <div class="form-group">
                 <input type="text" class="form-control" id="Schoolname" name="inputNames[]" value="" placeholder="Name" required>
               </div>
@@ -59,6 +62,7 @@
             </div>
             <div class="col-sm-3 nopadding">
               <div class="form-group" >
+
                 <input type="text" class="form-control" id="Degree" name="inputUserNames[]" value="" placeholder="Username" required>
 
               </div>
@@ -90,7 +94,7 @@
             </div>
           </div>
         </div>
-      </div>
+
 
       <div class="container">
         <div class="row">
@@ -102,6 +106,7 @@
 
         </div>
     </div>
+  </form>
 
     <!-- <div class="container">
       <div class="row">
