--- a/index2.html
+++ b/index2.html
@@ -123,7 +123,7 @@
 
 
   <!-- Copyright -->
-  <div class="footer-copyright text-right py-3"><span>Insights</span> EmailSender</h1>
+  <div class="footer-copyright text-center py-3"><span style="color:white;">Insights</span> <span style="color:#428bca;">EmailSender</span> 
 © 2018 Copyright:
     <a href="https://www.linkedin.com/in/daniellaraedinburgh/"  target="_blank"> Daniel Lara</a>
 
